# ai-agent-python

./: .env.example  .gitignore  README.md  pyproject.toml
sample_docs/: policies.md  product_overview.txt
src/agentic_rag/: __init__.py  config.py
src/agentic_rag/agent/: __init__.py  graph.py  prompts.py  service.py  state.py
src/agentic_rag/api/: __init__.py  main.py  service.py
src/agentic_rag/cli/: __init__.py  main.py
src/agentic_rag/ingestion/: __init__.py  loader.py  pipeline.py
src/agentic_rag/retrieval/: __init__.py  vector_store.py
