[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG system with LangGraph, FAISS, and OpenAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "faiss-cpu>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.12.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
agentic-rag = "agentic_rag.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]

[tool.hatch.build.targets.sdist]
include = ["src/agentic_rag"]
